    ADDED: viewer, print + copy actions
    ADDED: new krarc !
           supports passworded arj, ace, rar, zip
           step into hidden archives by pressing <RIGHT> on the archive
           decompressing debian packages by Alt+U
           using KWallet to store the passwords
           writes out the error messages of the archiver
           archive type autodetection by its header (first 512 byte)

    FIXED: viewer, detaching tab changes 'Editing' to 'Viewing'
           
     I18N: viewer: 'Editing', 'Viewing' can be translated
     I18N: Don't omit paragraphs and close all tags in strings to avoid errors
           in translation tools (based on patch by Giuseppe Bordoni)


1.70.0 "Round Robin"
==========================
    ADDED: new splashscreen + button to disable it in the look&feel section
    ADDED: winning icons, SVGs and fixed code to use them
    ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced
           later

  CHANGED: UserActions: addPlaceholderButton now only adds a space after
           an executable. Not after normal placeholders.

    FIXED: [ 1413503 ] detach tab shortcut changed Ctrl+Shift+D
    FIXED: [ 1407656 ] bookmark problem with identical names in different 
                       folders
    FIXED: [ 1421473 ] viewer doesn't notice that the URL was changed
    FIXED: [ 1235959 ] problems at viewing 600 permission files
    FIXED: cannot umount devices because of a watcher bug (thanks to vaclavj)
    FIXED: 1076857 & 1384529 - thanks to heiner
    FIXED: [ 1409160 ] Edited bookmarks require restart to become fully updated
    FIXED: missing dpkg from Konfigurator-Dependencies
    FIXED: [ 1234213 ] synchronizer keeps owner,group if possible
    FIXED: [ 1365423 ] synchronizer does not copy symlinks
    FIXED: [ 1393227 ] KURLListRequester uses url completion instead of
                       shell completion (caused problems at spaces)
    FIXED: [ 1391892 ] problem with international characters in the 