@@ -1,3 +1,4 @@
+    ADDED: Copy/Move: preserve all attributes (time, owner, group)
     ADDED: viewer, print + copy actions
     ADDED: new krarc !
            supports passworded arj, ace, rar, zip
